# monosat

./: .cproject  .gitignore  .project  .travis.yml  Aiger.cpp  Aiger.h  CMakeLists.txt  Cover.h  FORMAT.md  FiniteStateMachines.md  LICENSE  Main.cc  README  README.md  Subsume.h  TUTORIAL.md  style.xml
CGAL/: Interval_nt.h  compiler_config.h  version.h
ClangDebug/: makefile  objects.mk  sources.mk  subdir.mk
ClangDebug/api/: subdir.mk
ClangDebug/clang/: subdir.mk
ClangDebug/core/: subdir.mk
ClangDebug/dgl/: subdir.mk
ClangDebug/fsm/: subdir.mk
ClangDebug/geometry/: subdir.mk
ClangDebug/graph/: subdir.mk
ClangDebug/simp/: subdir.mk
ClangDebug/utils/: subdir.mk
ClangRelease/: makefile  objects.mk  sources.mk  subdir.mk
ClangRelease/core/: subdir.mk
ClangRelease/dgl/: subdir.mk
ClangRelease/fsm/: subdir.mk
ClangRelease/geometry/: subdir.mk
ClangRelease/graph/: subdir.mk
ClangRelease/simp/: subdir.mk
ClangRelease/utils/: subdir.mk
Debug/: makefile  objects.mk  sources.mk  subdir.mk
Debug/aiger/: subdir.mk
Debug/api/: subdir.mk
Debug/core/: subdir.mk
Debug/dgl/: subdir.mk
Debug/fsm/: subdir.mk
Debug/geometry/: subdir.mk
Debug/graph/: subdir.mk
Debug/simp/: subdir.mk
Debug/utils/: subdir.mk
OSX_ClangRelease/: makefile
OSX_ClangRelease/api/: subdir.mk
OSX_ClangRelease/dgl/: subdir.mk
OSX_ClangRelease/geometry/: subdir.mk
OSX_SharedLibrary/: makefile  sources.mk
OSX_SharedLibrary/api/: subdir.mk
OSX_SharedLibrary/fsm/: subdir.mk
OSX_SharedLibrary/utils/: subdir.mk
Release/: makefile  objects.mk  sources.mk  subdir.mk
Release/aiger/: subdir.mk
Release/api/: subdir.mk
Release/core/: subdir.mk
Release/dbg/: subdir.mk
Release/dgl/: subdir.mk
Release/fsm/: subdir.mk
Release/geometry/: subdir.mk
Release/graph/: subdir.mk
Release/minilib/: subdir.mk
Release/simp/: subdir.mk
Release/utils/: subdir.mk
SharedLibrary/: makefile  sources.mk
SharedLibrary/core/: subdir.mk
SharedLibrary/dgl/: subdir.mk
SharedLibrary/geometry/: subdir.mk
SharedLibrary/graph/: subdir.mk
SharedLibrary/simp/: subdir.mk
SharedLibraryDbg/: makefile  sources.mk
SharedLibraryDbg/api/: subdir.mk
SharedLibraryDbg/core/: subdir.mk
SharedLibraryDbg/dgl/: subdir.mk
SharedLibraryDbg/fsm/: subdir.mk
Static/: makefile  sources.mk  subdir.mk
Static/aiger/: subdir.mk
Win64SharedLibrary/: makefile  sources.mk  subdir.mk
aiger/: FORMAT  LICENSE  NEWS  README  aiger.c  aiger.h
amo/: AMOParser.h  AMOTheory.h
api/: Circuit.h  Monosat.cpp  Monosat.h
bv/: BVParser.h  BVSolver.h  BVTheory.h  BVTheorySolver.h
comparison/: ComparisonBVTheory.h  ComparisonParser.h
core/: AssumptionParser.h  Config.cpp  Config.h  Dimacs.h  Optimize.cpp  Optimize.h  Remap.h  Solver.cc  Solver.h  SolverTypes.h  Theory.h  TheorySolver.h
dgl/: AcyclicFlow.h  AllPairs.cpp  AllPairs.h  BFS.h  Chokepoint.h  ConnectedComponents.cpp  ConnectedComponents.h  Cycle.h  DFS.h  DFSCycle.h  Dijkstra.h  DijkstraAllPairs.h  Dinics.h  DinicsLinkCut.h  DisjointSetConnectedComponents.h  DisjointSets.h  Distance.cpp  Distance.h  DynamicConnectivity.h  DynamicConnectivityImpl.h  DynamicGraph.h  DynamicNodes.h  EdmondsKarp.h  EdmondsKarpAdj.h  EdmondsKarpDynamic.h  Flow.h  FloydWarshall.h  FloydWarshallCycle.h  IBFS.h  KohliTorr.h  Kruskal.h  LinkCutForest.h  MaxFlow.h  MinCut.h  MinimumSpanningTree.cpp  MinimumSpanningTree.h  NaiveDynamicConnectivity.h  PKTopologicalSort.h  Prim.h  RamalReps.h  (+11 more)
examples/: diorama_basic.gnf  diorama_distance.gnf  diorama_maxflow.gnf  reach.gnf
fsm/: DynamicFSM.h  FSMAcceptDetector.cpp  FSMAcceptDetector.h  FSMDawgAcceptDetector.cpp  FSMDawgAcceptDetector.h  FSMDetector.h  FSMGeneratesDetector.cpp  FSMGeneratesDetector.h  FSMGeneratorAcceptorDetector.cpp  FSMGeneratorAcceptorDetector.h  FSMParser.h  FSMReachDetector.cpp  FSMReachDetector.h  FSMTheory.h  FSMTransducesDetector.cpp  FSMTransducesDetector.h  LSystem.h  LSystemParser.h  LSystemTheory.h  P0LAcceptDetector.cpp  P0LAcceptDetector.h
geometry/: ConvexHull.h  ConvexHullCollisionDetection.cpp  ConvexHullCollisionDetector.h  ConvexHullDetector.cpp  ConvexHullDetector.h  ConvexPolygon.cpp  ConvexPolygon.h  Delaunay.h  DelaunayPolypartition.cpp  DelaunayPolypartition.h  GeometryDetector.h  GeometryParser.h  GeometryTheory.cpp  GeometryTheory.h  GeometryTypes.h  GridHeightmap.cpp  GridHeightmap.h  HalfPlane.h  Heightmap.h  HeightmapDetector.h  Line.h  LineSegment.h  MinkowskiSum.h  MonotoneConvexHull.cpp  MonotoneConvexHull.h  MonotoneDelaunay.cpp  MonotoneDelaunay.h  PointSet.cpp  PointSet.h  Polygon.cpp  Polygon.h  PolygonSet.h  QuickConvexHull.cpp  QuickConvexHull.h  Ray.h  Shape.h  SymbolicPolygon.cpp  SymbolicPolygon.h  SymbolicScalar.cpp  SymbolicScalar.h
graph/: AllPairs.h  AllPairsDetector.cpp  AllPairsDetector.h  AugmentedSplayTree.h  BFSReachability.h  BST.h  BTree.h  Chokepoint.h  ConnectDetector.cpp  ConnectDetector.h  ConnectedComponents.h  ConnectedComponentsDetector.cpp  ConnectedComponentsDetector.h  Connectivity.h  Cycle.h  CycleDetector.cpp  CycleDetector.h  DFSCycle.h  DFSReachability.h  Detector.h  DijGraph.h  Dijkstra.h  DijkstraAllPairs.h  Dinics.h  DinicsLinkCut.h  DisjointSetConnectedComponents.h  DisjointSets.cpp  DisjointSets.h  Distance.h  DistanceDetector.cpp  DistanceDetector.h  DynCon.h  DynDijkstra.h  DynamicConnectivity.h  DynamicConnectivityImpl.h  DynamicConnectivityb.h  DynamicGraph.h  EdmondsKarp.h  EdmondsKarpAdj.h  EdmondsKarpDynamic.h  (+53 more)
minisatpb/: README.md
mtl/: Alg.h  Alloc.h  Bitset.h  Deque.h  Heap.h  IntMap.h  Map.h  Queue.h  Rnd.h  Sort.h  Vec.h  XAlloc.h
pb/: PbParser.h  PbTheory.h
simp/: SimpSolver.cc  SimpSolver.h
src/monosatpb/: CMakeLists.txt  Config_pb.cpp  Config_pb.h  Debug.h  Hardware.h  Hardware_clausify.cc  Hardware_sorters.cc  LICENSE  Main.cc  Makefile  PbParser.cc  PbSolver.cc  PbSolver.h  PbSolver_convert.cc  PbSolver_convertBdd.cc  README  README.md  minisat+_script
src/monosatpb/ADTs/: File.h  Global.cc  StackAlloc.h  VecAlloc.h
utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
(+744 files in other folders)
